name:                rot26
version:             26
synopsis:            Rot26 cipher
description:         Rot26 cipher
homepage:            https://github.com/Fylwind/rot26
license:             PublicDomain
license-file:        LICENSE
author:              Fylwind
maintainer:          fyl@wolfpa.ws
copyright:           (C) Nobody
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/Fylwind/rot26

library
  exposed-modules:     Rot26
  build-depends:       base < 26
  default-language:    Haskell2010
